1.2.0 (in progress)

- When running ardj locally, use notify-send when track changes.
- Can now run a background audio player with 'ardj serve`, good for
  desktop usage.
- Fixed broken tests.


1.1.0

- The new recommended way to run the server is from the source tree.
- New child process monitor that controls all necessary subprocesses,
  launched by `ardj serve'.  Default configuration files are created
  on startup.
- Files can now be manually added to the media library, then recorded
  in the database by `ardj find-new-files'.
- Removed webapi (a web layer that was previously used to query for
  the next track to play).
- Added a new subprocess for the scrobbler.
- Fixed last.fm tag scanning.
- Fixed ReplayGain scanning.
- Fixed Debian and Ubuntu init scripts.
- Updated ezstream codec parameters.
- Fixed paths in example ezstream.xml.
- Added a small step-by-step install guide.
- Dumped ices in favor of ezstream.
- Added support for $MAIL in `ardj console'.
- Added colors to `ardj console'.
- Added new cli command `dedup`: merges tracks with equal file names.
- Added new syntax to the `tags' command to process multiple tags and whole artists.
- Newer tracks are now always merged into the older ones.
- Fixed merging of tracks with not all fields filled (e.g., weight).

1.0.18

- Fixed the jabber bot crashing when no chat room jid is set.
- Fixed init scripts for ardj-jabber and ardj-server.
- Added post-install tasks to setup.py
- Added built-in playlists that work out-of-the-box
- Added support for setup.py --prefix


1.0.17

- Fixed logging in ardj-ices.
- Added missing man page
- Added MANIFEST.in to setup.py
- Added to the PYPI repository.
- Removed useless parts of Makefile.


1.0.12

 - Fixed connection spinning in contrib/hotline.
 - Fixed Unicode problems in ardj console (CLI).
 - Fixed the voters command in fresh install (Jabber).
 - Fixed a bug in the MySQL database driver.
 - Fixed missing tags when downloading from Jamendo.